test_regress/t/t_fuzz_always_bad.out
%Error: t/t_fuzz_always_bad.v:10:15: Can't find definition of 'a' in dotted variable: 'c.a'
   10 |    always @ c.a c:h;
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_fuzz_always_bad.v:10:19: Can't find definition of task/function: 'h'
   10 |    always @ c.a c:h;
      |                   ^
%Error: Exiting due to
